log/build_2020-08-07_16-29-45/main/stdout_stderr.log
Scanning dependencies of target main
[ 25%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
[ 50%] Building CXX object CMakeFiles/main.dir/src/game.cpp.o
[ 75%] Building CXX object CMakeFiles/main.dir/src/goalie.cpp.o
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:7:52: warning: unused parameter 'ball' [-Wunused-parameter]
void Goalie::main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_message){
                                                   ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:7:92: warning: unused parameter 'robot' [-Wunused-parameter]
void Goalie::main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_message){
                                                                                           ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:7:127: warning: unused parameter 'goal' [-Wunused-parameter]
void Goalie::main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_message){
                                                                                                                              ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.cpp:7:167: warning: unused parameter 'send_message' [-Wunused-parameter]
void Goalie::main(message_info::msg::DetectionBall ball, message_info::msg::DetectionRobot robot, message_info::msg::GoalInfo goal, message_info::msg::RobotCommand & send_message){
                                                                                                                                                                      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:48:5: error: use of undeclared identifier 'goalie'; did you mean 'goal'?
    goalie.main(ball,robot,goal,command);
    ^~~~~~
    goal
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:32:33: note: 'goal' declared here
                message_info::msg::GoalInfo goal;
                                            ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:48:12: error: no member named 'main' in 'message_info::msg::GoalInfo_<std::__1::allocator<void> >'
    goalie.main(ball,robot,goal,command);
    ~~~~~~ ^
4 warnings generated.
1 warning and 2 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/game.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
